--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <h2>Eventos</h2>
             <!-- Lista de eventos da festa -->
             <ul>
-                <li>Evento 1</li>
-                <li>Evento 2</li>
-                <li>Evento 3</li>
+                <li>Evento 1: comidas estranhas de loucos</li>
+                <li>Evento 2: brincadeiras de loucos</li>
+                <li>Evento 3: danças de loucos</li>
             </ul>
         </section>
 
@@ -40,7 +40,7 @@
 
     <footer>
         <!-- Rodapé da página -->
-        <p>&copy; 2024 Festa do Colono. Todos os direitos reservados.</p>
+        <p>&copy; Todos os direitos reservados.</p>
     </footer>
 </body>
 </html>
@@ -56,19 +56,19 @@ Criado em: 7 de jun.7 de jun.
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cartão de Dia dos Namorados</title>
+    <title>Cartão de Dia dos loucos</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="card">
         <div class="card-header">
-            <h1>Feliz Dia dos Namorados!</h1>
+            <h1>Feliz Dia dos loucos!</h1>
         </div>
         <div class="card-body">
-            <p>Para o meu amor,</p>
-            <p>Feliz Dia dos Namorados! Você é a luz da minha vida e a razão do meu sorriso. Amo você!</p>
+            <p>Para o meus loucos,</p>
+            <p>Feliz Dia dos loucos! Assim que nascemos, choramos por nos vermos neste imenso palco de loucos.!</p>
             <p>Com amor,</p>
-            <p>[Seu Nome]</p>
+            <p>[uma louca]</p>
         </div>
         <div class="card-footer">
             <p>&hearts; &hearts; &hearts;</p>
