--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>FESTA DOS LOUCOS</h1>
+        <h1>FESTA DOS LOUCOSツ</h1>
         <!-- Outros elementos do cabeçalho, como navegação -->
     </header>
 
@@ -16,16 +16,16 @@
         <!-- Conteúdo principal da página -->
         <section id="about">
             <h2>Sobre a Festa</h2>
-            <p>Descrição sobre a Festa do Colono...</p>
+            <p>Descrição sobre a Festa dos loucos...</p>
         </section>
 
         <section id="events">
             <h2>Eventos</h2>
             <!-- Lista de eventos da festa -->
             <ul>
-                <li>Evento 1: comidas estranhas de loucos</li>
-                <li>Evento 2: brincadeiras de loucos</li>
-                <li>Evento 3: danças de loucos</li>
+                <li>➭Evento 1: comidas estranhas de loucos</li>
+                <li>➭Evento 2: brincadeiras de loucos</li>
+                <li>➭Evento 3: danças de loucos</li>
             </ul>
         </section>
 
@@ -49,8 +49,7 @@ Adicionar comentário para a turma...
 
 
 Aviso: "<!DOCTYPE html> <html lang="pt-BR">…"
-LUCIANE KUBIAK
-Criado em: 7 de jun.7 de jun.
+Criado em: 16 de ago de 2024.
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
@@ -68,7 +67,7 @@ Criado em: 7 de jun.7 de jun.
             <p>Para o meus loucos,</p>
             <p>Feliz Dia dos loucos! Assim que nascemos, choramos por nos vermos neste imenso palco de loucos.!</p>
             <p>Com amor,</p>
-            <p>[uma louca]</p>
+            <p>[uma louca]ツ</p>
         </div>
         <div class="card-footer">
             <p>&hearts; &hearts; &hearts;</p>
