--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
         </section>
 
         <section id="gallery">
+            <img src="" alt="">
             <h2>Galeria</h2>
-            <!-- Galeria de fotos da festa -->
             <div class="gallery">
-                <!-- Imagens da galeria -->
             </div>
         </section>
     </main>
