--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </section>
 
         <section id="gallery">
-            <img src="" alt="">
+            <img src="loucos.jpg" alt="imagem1">
             <h2>Galeria</h2>
             <div class="gallery">
             </div>
