--- a/index.html
+++ b/index.html
@@ -40,11 +40,8 @@
 </body>
 </html>
 
+<!DOCTYPE html> <html lang="pt-BR">…"
 
-
-
-Aviso: "<!DOCTYPE html> <html lang="pt-BR">…"
-Criado em: 16 de ago de 2024.
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
